--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,8 +7,8 @@
 }
 
 .primary-button {
-  @apply text-white bg-gray-800 rounded-lg mt-4 border text-center shadow transition duration-200 ease-in-out transform hover:-translate-y-px hover:shadow-md cursor-pointer;
+  @apply text-white bg-gray-800 rounded-lg mt-4 border p-2 text-center shadow transition duration-200 ease-in-out transform hover:-translate-y-px hover:shadow-md cursor-pointer;
 }
 .secondary-button {
-  @apply text-gray-600 mt-4 bg-white border border-gray-400 rounded-lg text-center transition duration-200 ease-in-out transform hover:-translate-y-px shadow hover:shadow-md cursor-pointer;
+  @apply text-gray-600 mt-4 bg-white border p-2 border-gray-400 rounded-lg text-center transition duration-200 ease-in-out transform hover:-translate-y-px shadow hover:shadow-md cursor-pointer;
 }
