--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,3 +12,7 @@
 .secondary-button {
   @apply text-gray-600 mt-4 bg-white border p-2 border-gray-400 rounded-lg text-center transition duration-200 ease-in-out transform hover:-translate-y-px shadow hover:shadow-md cursor-pointer;
 }
+
+h1 {
+  @apply text-3xl;
+}
