styling of stepper

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,5 +27,9 @@ h1 {
 }
 
 .progressbar {
-  @apply w-1/5;
+  @apply w-full bg-gray-400 text-white h-6 w-6 rounded-full flex items-center justify-center;
+}
+
+section {
+  @apply max-w-screen-xl;
 }
