--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,7 +27,11 @@ h1 {
 }
 
 .progressbar {
-  @apply w-full bg-gray-400 text-white h-6 w-6 rounded-full flex items-center justify-center;
+  @apply z-10 bg-gray-400 text-white h-6 w-6 rounded-full flex items-center justify-center hover:bg-blue-700;
+}
+
+.activecolor {
+  @apply z-10 bg-blue-700 text-white flex items-center justify-center hover:bg-blue-700;
 }
 
 section {
