--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,6 +12,9 @@
 .secondary-button {
   @apply text-gray-600 uppercase mt-4 bg-white border p-2 border-gray-400 rounded-lg text-center transition duration-200 ease-in-out transform hover:-translate-y-px shadow hover:shadow-md cursor-pointer;
 }
+.report-button {
+  @apply text-gray-600 uppercase bg-white border p-3 border-gray-400 rounded-lg text-center transition duration-200 ease-in-out transform hover:-translate-y-px shadow hover:shadow-md cursor-pointer;
+}
 
 .card {
   @apply text-gray-600 uppercase mt-4 bg-white border p-2 border-gray-400 rounded-lg text-center transition duration-200 ease-in-out transform hover:-translate-y-px shadow hover:shadow-md cursor-pointer;
@@ -39,7 +42,7 @@ h1 {
 }
 
 section {
-  @apply max-w-screen-lg sm:m-auto;
+  @apply max-w-screen-lg sm:m-auto px-6;
 }
 
 .progressbar1 {
