--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,12 +39,12 @@ h1 {
   opacity: 0;
 }
 
-.index-enter-active,
-.index-leave-active {
+.page-enter-active,
+.page-leave-active {
   transition: opacity 0.2s;
 }
-.index-enter,
-.index-leave-active {
+.page-enter,
+.page-leave-active {
   opacity: 0;
 }
 
